<resources>
    <string name="app_name">Trip Back-up</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps_detail">Map</string>
    <string name="title_activity_maps_adder">Map</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login_button">login</string>
    <string name="create_account_u"><u>Create account</u></string>
    <string name="create_account">Create account</string>
    <string name="signup_button">sign-up</string>
    <string name="existing_account"><u>Already have an account? Log-in</u></string>
    <string name="no_email">Enter email!</string>
    <string name="no_password">Enter password!</string>
    <string name="wrong_credentials">Wrong credentials!</string>
    <string name="create_account_error">Error while creating account!</string>
    <string name="password_shot">Password too short! Please use at least 6 characters!</string>
    <string name="recent_trips">Recent trips</string>
    <string name="add_trip">Add trip</string>
    <string name="fav_trips">Favourite trips</string>
    <string name="past_trips">Past trips</string>
    <string name="trip_title">Title</string>
    <string name="trip_description">Description</string>
    <string name="trip_add_media">Add media</string>
    <string name="trip_edit_media">Edit media</string>
    <string name="trip_places">Places</string>
    <string name="trip_add_places">Add places</string>
    <string name="trip_edit_places">Edit places</string>
    <string name="trip_save">Save trip</string>
    <string name="add_marker">add marker</string>
    <string name="save_markers">save markers</string>
    <string name="clean_markers">clean markers</string>
    <string name="trip_gallery">Gallery</string>
    <string name="no_recent_trips">You\'ve got no recent trips... \nconsider travelling more often!</string>
    <string name="mark_as_favourite">mark as favourite</string>
    <string name="no_recent_trips_button">Click the button to see all trips!</string>
    <string name="make_magic">Make magic</string>
    <string name="deleteTrip">Delete trip</string>
    <string name="add_as_widget">Add as widget</string>
    <string name="app_logo">App logo</string>
    <string name="simple_design_separator">Simple design separator</string>
    <string name="cd_photo">Photo</string>
    <string name="all_trips">All trips</string>
    <string name="account_created">Account created! Log-in!</string>
    <string name="editTrip">Edit trip</string>
    <string name="added_marker">Marked added!</string>
    <string name="no_marker">You haven\'t added any marker.</string>
    <string name="delete_marker">Markers deleted.</string>
    <string name="trip_back_up_logo">Trip Back-up Logo</string>
    <string name="splash_screen_loader">Loader</string>
    <string name="email_verification">Please verify your email!</string>
    <string name="no_picked_image_warning">You haven\'t picked an image.</string>
    <string name="places_added">Places added!</string>
    <string name="trip_not_saved">Trip couldn\'t be saved! Please check fields!</string>
    <string name="trip_saved">Trip saved!</string>
    <string name="images_added">Images added!</string>
    <string name="wiget_set_for">Widget set for </string>
    <string name="exclamation_mark">!</string>
    <string name="trip_deleted">Trip deleted!</string>
</resources>
