<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#32C0C0C0"
        android:padding="8dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:src="@drawable/ic_logo"
            android:contentDescription="@string/trip_back_up_logo"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@android:color/black"
            android:textSize="32sp" />

    </FrameLayout>

    <ImageView
        android:id="@+id/ivProgress"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_gravity="start|center"
        android:layout_marginTop="40dp"
        android:rotation="50"
        android:scaleType="center"
        android:contentDescription="@string/splash_screen_loader"
        android:src="@drawable/plane" />
</FrameLayout>