<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:padding="8dp"
    android:scrollbars="none"
    tools:context=".TripAdderActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/trip_title"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/etTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:focusable="true"
            android:hint="@string/trip_title"
            android:inputType="text"
            android:nextFocusUp="@id/btPlaces"
            android:nextFocusDown="@id/etDescription"
            android:singleLine="true" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/trip_description"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/etDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/trip_description"
            android:inputType="text"
            android:maxLines="5"
            android:nextFocusUp="@id/etTitle"
            android:nextFocusDown="@id/btMedia" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <TextView
                android:id="@+id/tvGallery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/btMedia"
                android:text="@string/trip_gallery"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btMedia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:nextFocusUp="@id/etDescription"
                android:nextFocusDown="@id/lvMedia"
                android:onClick="addMedia"
                android:text="@string/trip_add_media" />
        </RelativeLayout>

        <ListView
            android:id="@+id/lvMedia"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="8dp"
            android:nextFocusUp="@id/btMedia"
            android:nextFocusDown="@id/btPlaces" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <TextView
                android:id="@+id/tvPlaces"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/btPlaces"
                android:text="@string/trip_places"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btPlaces"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:nextFocusUp="@id/lvMedia"
                android:nextFocusDown="@id/btSave"
                android:onClick="addPlace"
                android:text="@string/trip_add_places" />
        </RelativeLayout>

        <Button
            android:id="@+id/btSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:nextFocusUp="@id/btPlaces"
            android:nextFocusDown="@id/etTitle"
            android:onClick="saveTrip"
            android:text="@string/trip_save" />

    </LinearLayout>

</ScrollView>